frontend/src/index.scss
$general-color: #4267b2; 
$background-color: white; 
$header-font: "Montserrat"; 
$copy-font: "Roboto"; 
$nav-height: 4vh; 
$highlight-color: rgb(40, 40, 40); 
$bright-highlight-color: yellow; 
body {
    background-color: transparent;
}
h1, h2, h3, h4, h5, h6 {
    font-family: $header-font; 
    text-align: center; 
    width: 100%; 
    margin-top: 0.5vh; 
    margin-bottom: 0.5vh; 
}
p {
    text-align: left; 
}
ul {
    text-align: inherit; 
}
header, section {
    padding-top: $nav-height; 
}

.jumbotron {
    padding-top: 20vh; 
    background-size: cover; 
    background-attachment: fixed; 
    min-height: 50vh; 
}
.intro-text {
    color: white; 
}
.intro-heading {
    font-size: 4vw; 
    font-weight: 800; 
    font-family: $header-font;     
}

.intro-subtext {
    font-size: 2vw; 
    font-family: $header-font;
    text-shadow: 5px; 
}

.subtext {
    font-family: $copy-font; 
}
nav {
    font-family: $header-font; 
    min-height: $nav-height; 
}
.navbar-brand {
    img {
        padding: 0.5vh; 
        max-height: $nav-height + 3vh; 
        filter: invert(1); 
        -webkit-filter: invert(1); 
    }
}

.nav-item.nav-link.active {
    color: $general-color !important; 
}

.navbar-nav.d-flex{
    width: 100%;
    justify-content: space-around;
}

.tile:hover {
    transform: scale(1.01,1.01); 
    box-shadow: 0 0 5px 2px rgba(0, 0, 0, .5); 
    transition: all 0.2s ease-in-out
}
.tile-img {
    margin-bottom: 1vh; 
}

.light {
    background-color: $background-color; 
}

// .bg-dark {
//     background-color: $general-color !important;
// }

.carousel-indicators {
    li {
        background-color: $general-color;
    }
    .active {
        background-color: $highlight-color; 
    }
}

.carousel-control-prev-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='{$general-color}' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
}

.carousel-control-next-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='{$general-color}' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
}

#carousel-wrapper {
    padding-top: 10vh;
    padding-bottom: 5vh; 
}
.carousel-size-controlled {
    height: 50vh; 
    max-height: 500px; 
}
.emp-quote {
    font-style: oblique; 
}

.team-member {
    flex-direction: column;
    justify-content: center; 
    p {
        text-align: center; 
    }
    margin: 5vh; 
}

#public_application {
    min-height: 30vh; 
}

.link-override {
    color: black; 
}
.link-override:hover {
    color: black; 
}

.link-button {
    color: $background-color; 
    background-color: $general-color; 
}

.link-button:hover {
    color: $bright-highlight-color; 
    transition: all 0.2s ease-in-out;
}

.contact-col {
    font-size: 10vh; 
    color: $highlight-color; 
}

.contact-col:hover {
    font-size: 10vh; 
    color: $general-color; 
    transition: all 0.2s ease-in-out;

}

footer {
    max-height: $nav-height; 
    font-size: 6px; 
}

.social-buttons {
    font-size: 2vw; 
}

#welcomebutton {
    color: $general-color;
    font-size: 1vw; 
    background-color: white; 
}
#welcomebutton:hover {
    background-color: #343a40; 
    transition: all 0.2s ease-in-out;
}

// .iframe-container {
//     overflow: hidden;
//     padding-top: 56.25%;
//     position: relative;
// }

// .iframe-container iframe {
//     border: 0;
//     height: 100%;
//     left: 0;
//     position: absolute;
//     top: 0;
//     width: 100%;
// }
// .iframe-container-4x3 {
//     padding-top: 75%;
//   }
  

